@@ -15,8 +15,6 @@ import uk.gov.hmcts.reform.wapostdeploymentfttests.domain.entities.idam.UserInfo
 import java.io.IOException;
 import java.util.Collections;
 
-import static java.lang.String.format;
-
 @Service
 @Import({DocumentUploadClientApi.class})
 public class DocumentManagementUploader {
@@ -40,7 +38,6 @@ public class DocumentManagementUploader {
                 ByteStreams.toByteArray(resource.getInputStream())
             );
 
-            System.out.println(format("Uploading document '%s'", file.getOriginalFilename()));
             UploadResponse uploadResponse =
                 documentUploadClientApi
                     .upload(
@@ -54,9 +51,8 @@ public class DocumentManagementUploader {
                 uploadResponse
                     .getEmbedded()
                     .getDocuments()
-                    .get(0);
+                    .getFirst();
 
-            System.out.println(format("Document '%s' uploaded successfully", file.getOriginalFilename()));
             return new Document(
                 uploadedDocument
                     .links
